(EIL-31)(EIL-38)Gameboard and Dices

--- a/angularclient/src/app/app.component.html
+++ b/angularclient/src/app/app.component.html
@@ -1,30 +1,1 @@
-<!-- <router-outlet></router-outlet> -->
-<div class="wrapper">
-    <div class="greenHome">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-    </div>
-
-    <div class="redHome">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-    </div>
-
-    <div class="blueHome">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-    </div>
-
-    <div class="yellowHome">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-    </div>
-</div>
+<router-outlet></router-outlet>
