--- a/angularclient/src/app/startpage/startpage.component.html
+++ b/angularclient/src/app/startpage/startpage.component.html
@@ -6,13 +6,18 @@
 <div style="margin-top: 20px; display: flex; align-items: center; justify-content: center">
   <ul class="hidden-listpoints" style="text-align: center">
     <li>
-      <button class="default-button button-big" (click)="onRegister()">
+      <button class="default-button button-big" [routerLink]="['/register']">
         Registrieren
       </button>
     </li>
     <li>
       <button class="default-button button-big" [routerLink]="['/login']">
         Login 
+      </button>
+    </li>
+    <li>
+      <button class="default-button button-big" [routerLink]="['/gameboard']">
+        Start 
       </button>
     </li>
   </ul>
