(EIL-48) added game history

--- a/angularclient/src/app/gameboard/gameboard.component.html
+++ b/angularclient/src/app/gameboard/gameboard.component.html
@@ -12,4 +12,7 @@
             <span class="dot" [ngStyle]="{backgroundColor:dot.color, 'border-color':dot.bordercolor}"></span>
         </div>
     </div>
+    <div class="games">
+        <h2>Vergangene Spiele</h2>
+    </div>
 </div>
