--- a/angularclient/src/app/gameboard/gameboard.component.scss
+++ b/angularclient/src/app/gameboard/gameboard.component.scss
@@ -41,12 +41,12 @@
         display: flex;
 
         .dice{
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin: 5px;
             border: 3px solid;
-            height: 50px;
-            width: 50px;
             font-size: 50px;
-            text-align: center;
         }
     }
 }
