--- a/angularclient/src/app/gameboard/gameboard.component.scss
+++ b/angularclient/src/app/gameboard/gameboard.component.scss
@@ -46,6 +46,8 @@
             align-items: center;
             margin: 5px;
             border: 3px solid;
+            height: 50px;
+            width: 50px;
             font-size: 50px;
         }
     }
