Finshing Login and Register with Navbar

--- a/angularclient/src/app/gameboard/gameboard.component.html
+++ b/angularclient/src/app/gameboard/gameboard.component.html
@@ -1,4 +1,4 @@
-<!-- <router-outlet></router-outlet> -->
+<app-nav></app-nav>
 <div class="wrapper">
     <div class="dice-component">
         <button class="roll-button" (click)="roll()">Roll</button>
@@ -12,6 +12,6 @@
         </div>
     </div>
     <div class="games">
-        <h2>Vergangene Spiele</h2>
+      <h2>Vergangene Spiele</h2>
     </div>
 </div>
