--- a/angularclient/src/app/nav/nav.component.scss
+++ b/angularclient/src/app/nav/nav.component.scss
@@ -10,4 +10,26 @@
   border: 1px solid grey;
   border-radius: 5px;
   background-color: white;
+  min-width: 200px;
+}
+.user-expand{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.user-expand .signout-btn{
+  width: 100%;
+  padding: 10px;
+  background-color: white;
+  color: red;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.user-expand .signout-btn:hover{
+  background-color: #f6f6f6;
+}
+.mat-expansion-panel-body {
+  padding: 0 0 0 !important;
 }
