Backend Service für Members Fix mit Unique Spalten

--- a/angularclient/src/app/nav/nav.component.html
+++ b/angularclient/src/app/nav/nav.component.html
@@ -19,11 +19,7 @@
   <div *ngIf="apiService.isAuthenticated && this.apiService.sessionUser != undefined" class="userblock-inner">
     <span><b>Game History</b></span>
     <div class="game-history-container">
-      <!--<ul>
-        <li *ngFor="let game of apiService.gameHistory"> (1)
-          {{ person.name }}
-        </li>
-      </ul>-->
+      Games...
     </div>
   </div>
 </div>
