--- a/angularclient/src/app/gameboard/gameboard.component.html
+++ b/angularclient/src/app/gameboard/gameboard.component.html
@@ -12,6 +12,6 @@
         </div>
     </div>
     <div class="games">
-      <h2>Vergangene Spiele</h2>
+      <h2>Spieler am Zug</h2>
     </div>
 </div>
