--- a/angularclient/src/app/start-dialog/start-dialog.component.html
+++ b/angularclient/src/app/start-dialog/start-dialog.component.html
@@ -2,16 +2,16 @@
   <h2 mat-dialog-title>Enter Players</h2>
   <mat-dialog-content [formGroup]="form">
     <mat-form-field>
-      <input matInput placeholder="Player1" formControlName="player1" />
+      <input style="color: red;" matInput placeholder="Red Player" formControlName="player1" />
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Player2" formControlName="player2"
+      <input style="color: blue;" matInput placeholder="Blue Player" formControlName="player2"
     /></mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Player3" formControlName="player3"
+      <input style="color: yellow;" matInput placeholder="Yellow Player" formControlName="player3"
     /></mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Player4" formControlName="player4"
+      <input style="color: green;" matInput placeholder="Green Player" formControlName="player4"
     /></mat-form-field>
   </mat-dialog-content>
 
