--- a/angularclient/src/app/start-dialog/start-dialog.component.html
+++ b/angularclient/src/app/start-dialog/start-dialog.component.html
@@ -8,7 +8,7 @@
       <input style="color: blue;" matInput placeholder="Blue Player" formControlName="player2"
     /></mat-form-field>
     <mat-form-field>
-      <input style="color: yellow;" matInput placeholder="Yellow Player" formControlName="player3"
+      <input style="color: #F6BE00;" matInput placeholder="Yellow Player" formControlName="player3"
     /></mat-form-field>
     <mat-form-field>
       <input style="color: green;" matInput placeholder="Green Player" formControlName="player4"
