--- a/angularclient/src/app/gameboard/gameboard.component.html
+++ b/angularclient/src/app/gameboard/gameboard.component.html
@@ -1,19 +1,36 @@
 <app-nav></app-nav>
 <div class="wrapper">
+  <div class="left-components">
     <div class="dice-component">
-        <button class="roll-button" (click)="roll()">Roll</button>
-        <div class="dices">
-            <div class="dice">{{rnd1}}</div>
-        </div>
+      <button class="roll-button" (click)="roll()">Roll</button>
+      <div class="dices">
+        <div class="dice">{{ rnd1 }}</div>
+      </div>
     </div>
-    <div class="grid-container">
-        <div class="grid-item" *ngFor="let dot of dots; index as i">
-            <span class="dot" [ngStyle]="{backgroundColor:dot.color, 'border-color':dot.bordercolor}">
-             <p class="figure" [ngStyle]="{color:dot.figureColor}" (click)="move(i)">♟</p>
-            </span>
-        </div>
+    <div class="nextPlayer-component">
+      <div>It's {{ nextPlayer.name }}'s turn</div>
     </div>
-    <div class="games">
-      <h2>Vergangene Spiele</h2>
+  </div>
+  <div class="grid-container">
+    <div class="grid-item" *ngFor="let dot of dots; index as i">
+      <span
+        class="dot"
+        [ngStyle]="{
+          backgroundColor: dot.color,
+          'border-color': dot.bordercolor
+        }"
+      >
+        <p
+          class="figure"
+          [ngStyle]="{ color: dot.figureColor }"
+          (click)="getFieldId(dot.fieldId)"
+        >
+          {{dot.content}}
+        </p>
+      </span>
     </div>
+  </div>
+  <div class="games">
+    <h2>Vergangene Spiele</h2>
+  </div>
 </div>
