--- a/angularclient/src/app/gameboard/gameboard.component.html
+++ b/angularclient/src/app/gameboard/gameboard.component.html
@@ -3,10 +3,10 @@
     <div class="dice-component">
       <button class="roll-button" (click)="roll()">Roll</button>
       <div class="dices">
-        <div class="dice">{{ rnd1 }}</div>
+        <div class="dice" *ngIf="hasDiced">{{ rnd1 }}</div>
       </div>
     </div>
-    <div class="nextPlayer-component">
+    <div class="nextPlayer-component" *ngIf="gameStarted">
       <p>
         It's
         <span
