--- a/angularclient/src/app/startpage/startpage.component.html
+++ b/angularclient/src/app/startpage/startpage.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center" >
   <h1 style="padding-top: 20px">
-    Welcome to {{ title }}!
+    Welcome!
   </h1>
 </div>
 <div style="margin-top: 20px; display: flex; align-items: center; justify-content: center">
